Switch WPT to use Taskcluster Checks integration
See https://github.com/web-platform-tests/wpt/issues/14846; this should
only be landed once wpt.fyi is ready to receive check_suite events.

--- a/tools/ci/tc/tasks/test.yml
+++ b/tools/ci/tc/tasks/test.yml
@@ -480,3 +480,10 @@ tasks:
       schedule-if:
         run-job:
           - wptrunner_infrastructure
+
+  - sink-task:
+      description: >-
+        Sink task for all other tasks, indicates success
+      use:
+        - wpt-base
+      command: echo "Success"
